# Cow

./: .gitignore  .stylish-haskell.yaml  README.md  cow.cabal  default.nix  shell.nix
app/: cow.hs
demos/: big.ltx  bigL.js  bigR.js  blarg.ltx  change.sty  cow.css  diffL.js  diffOut.html  diffOut.ltx  illustration.ltx  moveR.js  test.js
demos/old/: diffR.js  illustration.ltx  moveL.js  moveOut.html  moveOut.ltx
nix/: haskell.nix  nixpkgs.nix  pinned.nix
src/: TreeEditDistance.scala  base.js  change.sty  left.js  right.js  test.js  visualize.el
src/Cow/: Diff.hs  Equality.hs  Examples.hs  Main.hs  Merge.hs  Parse.hs  ParseTree.hs  Scope.hs  Substructure.hs  Type.hs  UI.hs
src/Cow/Language/: JavaScript.hs  OldJavaScript.hs  Token.hs
src/Cow/Language/JavaScript/: Value.hs
src/Cow/ParseTree/: Debug.hs  Read.hs  Viz.hs
src/visualization/: cow.js
