Name:                cow
Version:             0.3.0.0
Synopsis:            Semantic version control: language-aware diff and merge.
Description:         An advanced diff and merge tool that parses code files and then compares the resulting parse trees rather than the actual text of the program. It's pretty cool.
Homepage:            http://jelv.is/cow

License:             GPL-3
License-file:        LICENSE


Author:              Ankur Dave, Tikhon Jelvis
Maintainer:          tikhon@jelv.is

Category:            Development

Build-type:          Simple

Cabal-version:       >=1.9.2

Library
  Build-depends:     array >= 0.3
                   , base
                   , containers >= 0.4
                   , diagrams-contrib >= 1.3.0.8
                   , diagrams-lib >= 1.3.0.8
                   , diagrams-svg >= 1.3.1.10
                   , mtl >= 2
                   , parsec >= 3
  Hs-source-dirs:    src
  Exposed-modules: Cow.Diff
                 , Cow.ParseTree
                 , Cow.ParseTree.Read
                 , Cow.ParseTree.Viz
  GHC-options:       -rtsopts -O2

Executable cow
  Main-is:           src/Cow/Main.hs
  Build-depends:     base
                   , cow
                   , diagrams-svg >= 1.3.1.10
                   , parsec >= 3
  GHC-options:       -rtsopts -O2
