Name:                cow
Version:             0.3.0.0
Synopsis:            Semantic version control: language-aware diff and merge.
Description:         An advanced diff and merge tool that parses code files and then compares the resulting parse trees rather than the actual text of the program.
Homepage:            http://jelv.is/cow

License:             GPL-3
License-file:        LICENSE


Author:              Ankur Dave, Tikhon Jelvis <tikhon@jelv.is>
Maintainer:          Tikhon Jelvis <tikhon@jelv.is>

Category:            Development

Build-type:          Simple

Cabal-version:       >=1.9.2

Library
  GHC-options:       -rtsopts -O2
  Hs-source-dirs:    src

  Build-depends:     array >= 0.3
                   , base
                   , containers >= 0.4
                   , diagrams-contrib >= 1.3
                   , diagrams-lib >= 1.3
                   , diagrams-svg >= 1.3
                   , lens >= 4.13
                   , mtl >= 2
                   , parsec >= 3
                   , text >= 1.2

  Exposed-modules: Cow.Diff
                 , Cow.Examples
                 , Cow.Language.JavaScript
                 , Cow.Language.JavaScript.Value
                 , Cow.Language.Token
                 , Cow.ParseTree
                 , Cow.ParseTree.Read
                 , Cow.ParseTree.Viz

Executable cow
  Main-is:           src/Cow/Main.hs
  Build-depends:     base
                   , cow
                   , diagrams-svg >= 1.3
                   , lens >= 4.13
                   , parsec >= 3
                   , text >= 1.2
  GHC-options:       -rtsopts -O2
