cabal-version:       2.2

name:                cow
version:             0.3.0.0
synopsis:            Semantic version control: language-aware diff and merge.
description:         An advanced diff and merge tool that parses code files and then compares the resulting parse trees rather than the actual text of the program.
homepage:            http://jelv.is/cow

license:             GPL-3.0-or-later
license-file:        LICENSE

author:              Tikhon Jelvis <tikhon@jelv.is>, Ankur Dave, Dimitri DeFigueiredo
maintainer:          Tikhon Jelvis <tikhon@jelv.is>

category:            Development

build-type:          Simple

common shared
  default-langauge: Haskell2010

  ghc-options: -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates

               -Wno-name-shadowing
               -Wno-type-defaults
               -Wno-unused-do-bind

  default-extensions: AllowAmbiguousTypes
                      BangPatterns
                      DeriveFunctor
                      DeriveGeneric
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      FunctionalDependencies
                      GADTs
                      InstanceSigs
                      LambdaCase
                      MonadComprehensions
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      NamedWildCards
                      OverloadedLabels
                      OverloadedStrings
                      ParallelListComp
                      PartialTypeSignatures
                      PatternGuards
                      PatternSynonyms
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TypeApplications
                      UndecidableInstances
                      UnicodeSyntax
                      ViewPatterns

library
  import:            shared
  ghc-options:       -rtsopts -O2
  hs-source-dirs:    src

  -- TODO: Add version bounds? For now, dependency consistency is
  -- taken care of with Nix...
  build-depends:     base

                   , array
                   , containers
                   , diagrams-contrib
                   , diagrams-lib
                   , diagrams-svg
                   , generic-lens
                   , lens
                   , mtl
                   , parsec
                   , text

  exposed-modules: Cow.Diff
                 , Cow.Examples
                 , Cow.ParseTree
                 , Cow.ParseTree.Read
                 , Cow.ParseTree.Viz

                 , Cow.Language.JavaScript
                 , Cow.Language.JavaScript.Value
                 , Cow.Language.Token


executable cow
  import:            shared
  main-is:           cow.hs
  hs-source-dirs:    app
  build-depends:     base

                   , cow

                   , diagrams-svg >= 1.3
                   , lens >= 4.13
                   , parsec >= 3
                   , text >= 1.2
  ghc-options:       -rtsopts -O2
